--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -4,4 +4,8 @@
 <h1><%= t '.title' %></h1>
 
 
-&copy; @Ivan <%= Time.now.year %>
+<h5 class="mt-5"> <%= t '.contacts' %> </h5>
+<h6>GitHub: <a href="https://github.com/Ivan123445">Ivan123445</a> </h6>
+<h6>Telegramm: <a href="https://t.me/chamkin_i">@chamkin_i</a> </h6>
+<h6>Vk: <a href="https://vk.com/id258747010">id258747010</a>  </h6>
+<%= Time.now.year %>
