--- a/app/views/questions/_question.html.erb
+++ b/app/views/questions/_question.html.erb
@@ -16,10 +16,10 @@
         </p>
       </section>
 
-      <%= link_to link_to t('global.button.show'), question_path(question), class: 'btn btn-primary' %>
+      <%= link_to link_to t('global.button.show'), question_path(question), class: 'btn btn-outline-primary' %>
       <% if question.user_id == current_user.id %>
-      <%= link_to link_to t('global.button.edit'), edit_question_path(question), class: 'btn btn-secondary' %>
-      <%= link_to link_to t('global.button.delete'), question_path(question), class: 'btn btn-danger',
+      <%= link_to link_to t('global.button.edit'), edit_question_path(question), class: 'btn btn-outline-secondary' %>
+      <%= link_to link_to t('global.button.delete'), question_path(question), class: 'btn btn-outline-danger',
         data: {method: :delete, confirm: t('global.dialog.you_sure')} %>
       <% end %>
     </div>
