--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -4,7 +4,7 @@
 
 <h1 class="mb-4"> <%= t('.title') %> </h1>
 
-<%= link_to t('.new'), new_question_path, class: 'btn btn-primary btn-lg mb-3' %>
+<%= link_to t('.new'), new_question_path, class: 'btn btn-dark mb-3' %>
 
 <%== pagy_bootstrap_nav @pagy %>
 
