--- a/app/views/shared/_menu.html.erb
+++ b/app/views/shared/_menu.html.erb
@@ -3,6 +3,7 @@
     <div class="container">
       <nav class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
         <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+          <%= image_tag("favicon_white.png", size: "30x30", :alt => "New Askit") %>
           <li><%= nav_tab t('menu.home'), root_path,
           class: 'nav-link px-2', current_page: current_page %></li>
           <li><%= nav_tab t('menu.questions'), questions_path,
